--- a/bgmod.vcxproj
+++ b/bgmod.vcxproj
@@ -60,8 +60,10 @@ copy /Y $(ProjectDir)\amxmodx_include\bmod.inc c:\SteamGames\Half-Life\cstrike\a
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bsp2tris.cpp" />
+    <ClCompile Include="call.cpp" />
     <ClCompile Include="forwards.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="model.cpp" />
     <ClCompile Include="natives.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="sdk\amxxmodule.cpp" />
@@ -69,6 +71,8 @@ copy /Y $(ProjectDir)\amxmodx_include\bmod.inc c:\SteamGames\Half-Life\cstrike\a
   <ItemGroup>
     <ClInclude Include="bsp2tris.h" />
     <ClInclude Include="bspfile.h" />
+    <ClInclude Include="call.h" />
+    <ClInclude Include="model.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="sdk\amxxmodule.h" />
     <ClInclude Include="sdk\moduleconfig.h" />
