--- a/bgmod.vcxproj.filters
+++ b/bgmod.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="studio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="INSTALL">
